<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newtitle"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#bcbcbc" />

        <EditText
            android:id="@+id/etEditTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true">
        </EditText>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Begonnen"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#bcbcbc" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/spEditDay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/days" />

            <Spinner
                android:id="@+id/spEditMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/months" />

            <Spinner
                android:id="@+id/spEditYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/years" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drivertyp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#bcbcbc" />

        <Spinner
            android:id="@+id/spEditDriverTyp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/drivertyps" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvNormalDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/normaldrive"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />

                <EditText
                    android:id="@+id/etEditNormalDrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" >
                </EditText>
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvRoadDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/roaddrive"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />

                <EditText
                    android:id="@+id/etEditRoadDrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvHighwayDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/highwaydrive"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />

                <EditText
                    android:id="@+id/etEditHighwayDrive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/tvNightDrive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nightdrive"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#bcbcbc" />

                <EditText
                    android:id="@+id/etEditNightDrive"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

       <!-- <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <ImageView
                android:id="@+id/ivSmiley"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/smiley" />

            <ImageView
                android:id="@+id/ivNormaly"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/normaly" />

            <ImageView
                android:id="@+id/ivSolala"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/solala" />

            <ImageView
                android:id="@+id/ivWorry"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/worry" />
        </LinearLayout>  -->

        <Button
            android:id="@+id/btEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editlesson" />

    </LinearLayout>

</LinearLayout>